fix overlap of state

--- a/webapp/src/components/jira_ticket_tooltip/ticketStyle.scss
+++ b/webapp/src/components/jira_ticket_tooltip/ticketStyle.scss
@@ -169,4 +169,5 @@
     font-weight: 600;
     margin: 5px 5px 5px 0px;
     padding: 0px 8px;
+    background: rgba(63, 67, 80, 0.08);
 }
